add in a base profile gen function
doesn't parse tickets just yet
adds module xml2js

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start": "node www/index.js"
   },
   "dependencies": {
-    "random-seed": "^0.3.0"
+    "random-seed": "^0.3.0",
+    "xml2js": "^0.4.19"
   }
 }
