--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "bugs": "https://github.com/llnwn/hyenas/issues",
   "homepage": "https://github.com/llnwn/hyenas",
   "version": "0.5.0",
-  "license": "GPLv3",
+  "license": "GPL-3.0-only",
   "keywords": ["psn","playstation","playstation3","ps3","ps3-tool","game-server","game","server"],
   "description": "The world's first homemade PlayStation®Network emulator for the PS3®.",
   "repository": "github:llnwn/hyenas",
-  "private": false,
+  "private": true,
   "engines": {
     "node": ">= 8.12.0",
     "npm": ">= 6.4.1",
