--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mysql": "^2.16.0",
     "random-seed": "^0.3.0",
     "require-all": "^3.0.0",
+    "updns": "^1.3.1",
     "xml2js": "^0.4.19"
   }
 }
