--- a/hosts.example
+++ b/hosts.example
@@ -1,21 +1,35 @@
-bind                127.0.0.1:53     # address => port
+bind                (Your PC Local IP Here):53     # address => port
 proxy               8.8.8.8        # proxy => DNS Server
 
+
+poseidon.dl.playstation.net (Your PC Local IP Here) # PS3 Themes and Game Trailers Domain
+zeus.dl.playstation.net (Your PC Local IP Here) # PS3 PKG Domain
+apollo.dl.playstation.net (Your PC Local IP Here) # PS3 Store PNGs
+ares.dl.playstation.net (Your PC Local IP Here) # PS3 Misc PKGs, Apps, Betas
 fus01.ps3.update.playstation.net (Your PC Local IP Here) #PS3 Update List.txt Redirects to .PUP domains
-
-#SCEI-0.auth.np.ac.playstation.net (Your PC Local IP Here) # Date & Time Authentication Server.
-
 playstation.com (Your PC Local IP Here) # PS3Landing
-#media.playstation.com (Your PC Local IP Here) # Unknown for now...
+xmb-e.dl.playstation.net (Your PC Local IP Here) #xmb launch native applications? Spotify and Music Unlimited Support this.
 legaldoc.dl.playstation.net (Your PC Local IP Here) #PSN Legal Docs Domain
-nsx-e.np.dl.playstation.net  (Your PC Local IP Here) #PSN Logger? Log.txt for now. 
+nsx-e.np.dl.playstation.net  (Your PC Local IP Here) #PSN Logger? Log.txt for now. NSX Test Server?
 video.dl.playstation.net (Your PC Local IP Here) # 3 value in txt as a response
 comic.dl.playstation.net (Your PC Local IP Here) # 3 value in txt as a response
-static-resource.np.community.playstation.net (Your PC Local IP Here) #Avatars... and more?
-#cdn-a.sonyentertainmentnetwork.com (Your PC Local IP Here) 
-#themis.dl.playstation.net (Your PC Local IP Here) # Open Souce Licenses
-#trophy.ww.np.community.playstation.net (Your PC Local IP Here) # PSN Trophies, Sync
+static-resource.np.community.playstation.net (Your PC Local IP Here) #Avatars... Trophy Status, and more?
+#us.np.adproxy.ndmdhs.com (Your PC Local IP Here) #Encrypted Data... Amazon ads served to Sony? Either way, domain name server no longer exists?...
+#themis.dl.playstation.net (Your PC Local IP Here) # Open Souce Licenses #Seems to request a TCP response?
+#media.playstation.com (Your PC Local IP Here) # Unknown for now...
 
-xmb-e.dl.playstation.net (Your PC Local IP Here) #xmb launch native applications? Spotify and Music Unlimited Support this.
+#cdn-a.sonyentertainmentnetwork.com (Your PC Local IP Here) #Unknown for now...
+#trophy.ww.np.community.playstation.net (Your PC Local IP Here) # PSN Trophies, Sync
+#IV0001-NPXS01001-00.auth.np.ac.playstation.net (Your PC Local IP Here) #PSN System Plugin Authentication check
+#native-ps3.np.ac.playstation.net (Your PC Local IP Here) #PSN Authentication Check, Used for PSN Sign-Up, among other features.
 #a0.ww.np.dl.playstation.net (Your PC Local IP Here) #PSN Game Updates, and more. Not usable at this time.
-us.np.adproxy.ndmdhs.com (Your PC Local IP Here) #Amazon ads served to Sony? Either way, domain name server no longer exists?...
+#us.np.adproxy.ndmdhs.com (Your PC Local IP Here) #Amazon ads served to Sony? Either way, domain name server no longer exists?...
+#SCEI-0.auth.np.ac.playstation.net (Your PC Local IP Here) # Date & Time Authentication Server.
+#nsx.sec.np.dl.playstation.net (Your PC Local IP Here) #Encypted Data
+#image.api.np.km.playstation.net (Your PC Local IP Here) #Unknown for now...
+#commerce.np.ac.playstation.net (Your PC Local IP Here) #PSN Commerce for activating the file? 
+#homer.dl.playstation.net (Your PC Local IP Here) #Encryption? Used by PS Store for Catagory pics and more.
+#sf.prod.sonyentertainmentnetwork.com (Your PC Local IP Here) #PS Store Domain... If redirects, PS3 Gives "This service, is currently undergoing maintenance.
+#b7.us.np.communication.playstation.net (Your PC Local IP Here) #Part of PSN Sign-In Procedure 
+#getprof.us.np.community.playstation.net (Your PC Local IP Here) #Part of PSN Sign In, Gives error code 80710092 on PS3
+#native-ps3.np.ac.playstation.net (Your PC Local IP Here) #Part of PSN Codes, and more?...
