Major Additions to Hyenas!
Fixed LegalDoc Tos & Privacy Policy 2 pages
Added nsx.np domain
Support for Mp4, and pkgs added successfully.
Added more ps3 update lists, and added support for ps vita update lists!
Added more static-resources for Vita.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "contributors": [
     "Zmxhawrhbg (https://github.com/Zmxhawrhbg)",
     "Hope (https://github.com/Hopefullyidontgetbanned)"
+	"JumpSuit (https://github.com/Jump-Suit)"
   ],
   "homepage": "https://github.com/DeltaFlush/hyenas",
   "bugs": "https://github.com/DeltaFlush/hyenas/issues",
