--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,6 @@ hyenas_modules/ps3update/data/487/PS3UPDAT.PUP
 *.pkg
 *.mp4
 obj/Debug/Hyenas.njsproj.FileListAbsolute.txt
+hyenas_modules/ps3blob/data/lbi/lbiAnnouncementXML.php
+hyenas_modules/ps3blob/module.js
+*.PUP
