Added support for more domains, new files,
Added GT6 Eula, Tom Clancy's Ghost Recon Uplay Passport Rating xml, Ghost Recon game Ranking xml for Squads, Rainbow Six Vegas Lobby xml, added support for ESFM trophy files.
Added testing code for Certificates on TLS domains.
added domain for Socom 4 news.
Added tmdb Live Events Viewer xml.
More Avatars added, as well as surface nsx.np images.
Cleaned up Ares module.
Added Hakoniwa, and a1.np.dl domain for EULAs.
Fixed formatting in Package.json

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,5 @@ obj/Debug/Hyenas.njsproj.FileListAbsolute.txt
 hyenas_modules/ps3blob/data/lbi/lbiAnnouncementXML.php
 hyenas_modules/ps3blob/module.js
 *.PUP
+*.crt
+*.key
