--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "Jonathan R (https://github.com/DeltaFlush)",
   "contributors": [
     "Zmxhawrhbg (https://github.com/Zmxhawrhbg)",
-    "Hope (https://github.com/Hopefullyidontgetbanned)"
+    "Hope (https://github.com/Hopefullyidontgetbanned)",
 	"JumpSuit (https://github.com/Jump-Suit)"
   ],
   "homepage": "https://github.com/DeltaFlush/hyenas",
